--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <body onload="webGLStart();">
     <canvas id="wegl-canvas" style="border: none;" width="500" height="500"></canvas>
 
+    <p> <a href="mandelbrot.html"> A </a> </p>
+
     <button onclick="window.location.href = 'https://cgsgES1A.github.io/mandelbrot.html';">mandelbrot</button>
 </body>
 
