--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -10,6 +10,7 @@
         var checkers_cell_width;
         var zoom_value;
         var delx, dely;
+        var oldx, oldy;
         var frag_text = `#version 300 es
     precision mediump float;
 
@@ -166,6 +167,8 @@
             checkers_cell_width = 30;
             delx = 250;
             dely = 250;
+            oldx = 500;
+            oldy = 500;
             document.getElementById('input_checkers_cell_width').value = checkers_cell_width;
             document.getElementById('input_zoom_value').value = zoom_value;
 
@@ -223,8 +226,10 @@
 
         function mouseMove(e) {
             if (flag) {
-                delx = e.clientX;
-                dely = e.clientY;
+                delx = oldx - e.clientX;
+                dely = oldy - e.clientY;
+                oldx = e.clientX;
+                oldy = e.clientY;
             }
         }
         function mouseDown() {
@@ -245,8 +250,8 @@
         onkeyup="update_checkers_cell_width()"><br>
     <br />
 
-    <label for="input_zoom_value"> zoom value</label> <input type="text" id="input_zoom_value"
+    <label for="input_zoom_value"> zooooooom value</label> <input type="text" id="input_zoom_value"
         onkeyup="update_zoom_value()"><br>
 </body>
 
-</html># elizaveta_sopina.github.io
+</html>
