--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -10,7 +10,6 @@
         var checkers_cell_width;
         var zoom_value;
         var delx, dely;
-        var oldx, oldy;
         var frag_text = `#version 300 es
     precision mediump float;
 
@@ -167,8 +166,6 @@
             checkers_cell_width = 30;
             delx = 250;
             dely = 250;
-            oldx = 0;
-            oldy = 0;
             document.getElementById('input_checkers_cell_width').value = checkers_cell_width;
             document.getElementById('input_zoom_value').value = zoom_value;
 
@@ -226,10 +223,8 @@
 
         function mouseMove(e) {
             if (flag) {
-                delx = e.clientX - oldx;
-                dely = e.clientY - oldy;
-                oldx = e.clientX;
-                oldy = e.clientY;
+                delx = e.clientX;
+                dely = e.clientY;
             }
         }
         function mouseDown() {
