--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -84,6 +84,7 @@
         var shaderProgram;
 
         function initShaders() {
+            var ft, vt;
             var url1 = 'fetch_frag_shader.js';
             var url2 = 'fetch_vert_shader.js';
 
