--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -89,7 +89,7 @@
             var url2 = 'fetch_vert_shader.js';
 
             ft = fetch(url1)
-                .then(response => response.text());
+                .then(response => alert(response.text));
             vt = fetch(url2)
                 .then(response => response.text());
 
