--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -261,6 +261,9 @@
     <label for="input_checkers_cell_width"> iteration number</label> <input type="text" id="input_checkers_cell_width"
         onkeyup="update_checkers_cell_width()"><br>
     <br />
+
+    <label for="input_zoom_value"> zoooooom value</label> <input type="text" id="input_zoom_value"
+        onkeyup="update_zoom_value()"><br>
 </body>
 
 </html>
