--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -210,14 +210,6 @@
             if (isNaN(checkers_cell_width))
                 checkers_cell_width = 1;
         }
-
-        function update_zoom_value() {
-            data = document.getElementById('input_zoom_value').value;
-
-            zoom_value = parseInt(data);
-            if (isNaN(zoom_value))
-                zoom_value = 1;
-        }
     </script>
 
 
@@ -252,7 +244,7 @@
             if (e.deltaY > 300)
                 zoom_value *= 1.2;
             if (e.deltaY < 301)
-                zoom_value /= 1.2;
+                zoom_value *= -1.2;
         }
     </script>
 
@@ -260,10 +252,6 @@
 
     <label for="input_checkers_cell_width"> iteration number</label> <input type="text" id="input_checkers_cell_width"
         onkeyup="update_checkers_cell_width()"><br>
-    <br />
-
-    <label for="input_zoom_value"> zoooooom value</label> <input type="text" id="input_zoom_value"
-        onkeyup="update_zoom_value()"><br>
 </body>
 
 </html>
