--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -239,6 +239,8 @@
         }
         function mouseDown() {
             flag = 1;
+            oldx = e.clientX;
+            oldy = e.clientY;
         }
         function mouseUp() {
             flag = 0;
