--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -234,6 +234,8 @@
         document.getElementById("wegl-canvas").addEventListener("mousemove", mouseMove);
         document.getElementById("wegl-canvas").addEventListener("wheel", mouseWheel);
 
+        document.getElementById("input_checkers_cell_width").style = "background-color:MediumPurple";
+
         function mouseMove(e) {
             if (flag) {
                 delx += e.clientX - oldx;
