--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -260,8 +260,8 @@
 
     <br />
 
-    <label for="input_checkers_cell_width" style="background-color:MediumPurple"> iteration number</label> <input
-        type="text" id="input_checkers_cell_width" onkeyup="update_checkers_cell_width()"><br>
+    <label for="input_checkers_cell_width"> iteration number</label> <input type="text" id="input_checkers_cell_width"
+        onkeyup="update_checkers_cell_width()" style="background-color:MediumPurple"><br>
 
 </body>
 
