--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <html>
 
 <head>
-    <title>Page</title>
+    <title>My projects)</title>
 
     <script type="text/javascript" src="glMatrix-0.9.5.min.js"></script>
-
-    <script type="text/javascript">
-    </script>
 
 </head>
 
 
 <body onload="webGLStart();">
-    <canvas id="wegl-canvas" style="border: none;" width="500" height="500"></canvas>
+    <h1> My projects) </h1>
 
-    <p> <a href="mandelbrot.html"> A </a> </p>
-
-    <button onclick="window.location.href = 'https://cgsgES1A.github.io/mandelbrot.html';">mandelbrot</button>
+    <button onclick="window.location.href = 'https://cgsgES1A.github.io/mandelbrot.html';">Mandelbrot</button>
 </body>
 
 </html>
