--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body onload="webGLStart();">
     <h1> My projects) </h1>
-
+    <hr color=MediumPurple size="4">
+    <br><br>
     <button onclick="window.location.href = 'https://cgsgES1A.github.io/mandelbrot.html';">Mandelbrot</button>
 </body>
 
