--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
 
     <table>
         <tr>
-            <td><button class="button"
+            <td><button
                     onclick="window.location.href = 'https://cgsgES1A.github.io/mandelbrot.html';">Mandelbrot</button>
+            </td>
+        </tr>
+        <tr>
+            <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/calendar.html';">Calendar</button>
             </td>
         </tr>
     </table>
