--- a/calendar.html
+++ b/calendar.html
@@ -16,7 +16,7 @@
     <script>
     </script>
 
-    <button>
+    <table>
         <tr>
             <td>.</td>
             <td>.</td>
@@ -80,7 +80,7 @@
             <td>.</td>
             <td>.</td>
         </tr>
-    </button>
+    </table>
 </body>
 
 </html>
