--- a/calendar.html
+++ b/calendar.html
@@ -12,11 +12,11 @@
 </head>
 
 
-<body onload="webGLStart();">
+<body>
     <script>
     </script>
 
-    <table>
+    <table border="2">
         <tr>
             <td>.</td>
             <td>.</td>
