--- a/calendar.html
+++ b/calendar.html
@@ -15,6 +15,10 @@
 <body>
     <script>
         document.write(Date());
+
+        setInterval(function () {
+            document.getElementById('current_date_time_block2').innerHTML = date_time();
+        }, 1000);
     </script>
 
     <table border="2">
