--- a/calendar.html
+++ b/calendar.html
@@ -17,9 +17,11 @@
         document.write(Date());
 
         setInterval(function () {
-            document.getElementById('current_date_time_block2').innerHTML = date_time();
+            document.getElementById('current_date_time_block').innerHTML = date_time();
         }, 1000);
     </script>
+
+    <div id="current_date_time_block"></div>
 
     <table border="2">
         <tr>
