--- a/calendar.html
+++ b/calendar.html
@@ -35,6 +35,8 @@
         setInterval(function () {
             document.getElementById('current_date_time_block').innerHTML = date_time();
         }, 1000);
+
+        document.getElementById('aaa').innerHTML = "A";
     </script>
 
     <div id="current_date_time_block"></div>
@@ -62,16 +64,7 @@
             <td>.</td>
             <td>.</td>
             <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-        </tr>
-        <tr>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
+            <td id="aaa">.</td>
             <td>.</td>
             <td>.</td>
             <td>.</td>
