--- a/calendar.html
+++ b/calendar.html
@@ -36,7 +36,7 @@
             document.getElementById('current_date_time_block').innerHTML = date_time();
         }, 1000);
 
-        document.getElementById('aaa').innerHTML = "A";
+        document.getElementById('aaa').innerHTML = 'A';
     </script>
 
     <div id="current_date_time_block"></div>
