--- a/calendar.html
+++ b/calendar.html
@@ -36,7 +36,7 @@
             document.getElementById('current_date_time_block').innerHTML = date_time();
         }, 1000);
 
-        document.getElementById('aaa').innerHTML = 'A';
+        document.getElementById('current_date_time_block').innerHTML = "A";
     </script>
 
     <div id="current_date_time_block"></div>
@@ -64,7 +64,7 @@
             <td>.</td>
             <td>.</td>
             <td>.</td>
-            <td id="aaa">.</td>
+            <td id="aaa"></td>
             <td>.</td>
             <td>.</td>
             <td>.</td>
