--- a/calendar.html
+++ b/calendar.html
@@ -33,10 +33,10 @@
         }
 
         setInterval(function () {
-            document.getElementById('current_date_time_block').innerHTML = date_time();
+            document.getElementById('current_date_time_block').innerHTML = "A";
         }, 1000);
 
-        document.getElementById('current_date_time_block').innerHTML = "A";
+        document.getElementById('aaa').innerHTML = "A";
     </script>
 
     <div id="current_date_time_block"></div>
