--- a/calendar.html
+++ b/calendar.html
@@ -14,6 +14,19 @@
 
 <body>
     <script>
+        var current_datetime;
+        var day;
+        var month;
+        var year;
+        var hours;
+        var minutes;
+        var seconds;
+        var ind = 'aaa';
+        var Shift = [6, 9, 2, 5, 7, 3, 5, 8, 4, 6, 9, 4];
+        var NumOfDays = [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31];
+        var first_day = (1 + Shift[month - 1] + year % 4 + 1) % 7;
+
+
         function zero_first_format(value) {
             if (value < 10) {
                 value = '0' + value;
@@ -21,23 +34,29 @@
             return value;
         }
         function date_time() {
-            var current_datetime = new Date();
-            var day = zero_first_format(current_datetime.getDate());
-            var month = zero_first_format(current_datetime.getMonth() + 1);
-            var year = current_datetime.getFullYear();
-            var hours = zero_first_format(current_datetime.getHours());
-            var minutes = zero_first_format(current_datetime.getMinutes());
-            var seconds = zero_first_format(current_datetime.getSeconds());
+            current_datetime = new Date();
+            day = zero_first_format(current_datetime.getDate());
+            month = zero_first_format(current_datetime.getMonth() + 1);
+            year = current_datetime.getFullYear();
+            hours = zero_first_format(current_datetime.getHours());
+            minutes = zero_first_format(current_datetime.getMinutes());
+            seconds = zero_first_format(current_datetime.getSeconds());
 
             return day + "." + month + "." + year + " " + hours + ":" + minutes + ":" + seconds;
         }
 
-        setInterval(function () {
-            document.getElementById('current_date_time_block').innerHTML = "date_time()";
-        }, 1000);
+        function setCalendar() {
+            for (var i = 0; i < NumOfDays[month - 1]; i++) {
+                ;
+            }
+        }
 
         setInterval(function () {
-            document.getElementById('aaa').innerHTML = "date_time()";
+            document.getElementById('current_date_time_block').innerHTML = date_time();
+        }, 10);
+
+        setInterval(function () {
+            document.getElementById(ind).innerHTML = "A";
         }, 1000);
     </script>
 
