--- a/calendar.html
+++ b/calendar.html
@@ -45,10 +45,10 @@
             return day + "." + month + "." + year + " " + hours + ":" + minutes + ":" + seconds;
         }
 
-        function setCalendar() {
-            for (var i = 0; i < NumOfDays[month - 1]; i++) {
-                ;
-            }
+        for (var i = 0; i < NumOfDays[month - 1]; i++) {
+            setInterval(function () {
+                document.getElementById(i + first_day).innerHTML = i + 1;
+            }, 10);
         }
 
         setInterval(function () {
@@ -64,58 +64,59 @@
 
     <table border="2">
         <tr>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
+            <td id="1">.</td>
+            <td id="2">.</td>
+            <td id="3">.</td>
+            <td id="4">.</td>
+            <td id="5">.</td>
+            <td id="6">.</td>
+            <td id="7">.</td>
         </tr>
         <tr>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
+            <td id="8">.</td>
+            <td id="9">.</td>
+            <td id="10">.</td>
+            <td id="11">.</td>
+            <td id="12">.</td>
+            <td id="13">.</td>
+            <td id="14">.</td>
         </tr>
         <tr>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td id="aaa"></td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
+            <td id="15">.</td>
+            <td id="16">.</td>
+            <td id="17">.</td>
+            <td id="18"></td>
+            <td id="19">.</td>
+            <td id="20">.</td>
+            <td id="21">.</td>
         </tr>
         <tr>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
+            <td id="22">.</td>
+            <td id="23">.</td>
+            <td id="24">.</td>
+            <td id="25">.</td>
+            <td id="26">.</td>
+            <td id="27">.</td>
+            <td id="28">.</td>
         </tr>
         <tr>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
+            <td id="29">.</td>
+            <td id="30">.</td>
+            <td id="31">.</td>
+            <td id="32">.</td>
+            <td id="33">.</td>
+            <td id="34">.</td>
+            <td id="35">.</td>
         </tr>
         <tr>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
-            <td>.</td>
+
+            <td id="36">.</td>
+            <td id="37">.</td>
+            <td id="38">.</td>
+            <td id="39">.</td>
+            <td id="40">.</td>
+            <td id="41">.</td>
+            <td id="42">.</td>
         </tr>
     </table>
 </body>
