--- a/calendar.html
+++ b/calendar.html
@@ -56,7 +56,7 @@
         }, 10);
 
         setInterval(function () {
-            document.getElementById(ind).innerHTML = "A";
+            document.getElementById('aaa').innerHTML = "A";
         }, 1000);
     </script>
 
