--- a/calendar.html
+++ b/calendar.html
@@ -14,13 +14,13 @@
 
 <body>
     <script>
-        var current_datetime;
-        var day;
-        var month;
-        var year;
-        var hours;
-        var minutes;
-        var seconds;
+        var current_datetime = new Date();
+        var day = zero_first_format(current_datetime.getDate());
+        var month = zero_first_format(current_datetime.getMonth() + 1);
+        var year = current_datetime.getFullYear();
+        var hours = zero_first_format(current_datetime.getHours());
+        var minutes = zero_first_format(current_datetime.getMinutes());
+        var seconds = zero_first_format(current_datetime.getSeconds());
         var ind = '1';
         var Shift = [6, 9, 2, 5, 7, 3, 5, 8, 4, 6, 9, 4];
         var NumOfDays = [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31];
@@ -34,14 +34,6 @@
             return value;
         }
         function date_time() {
-            current_datetime = new Date();
-            day = zero_first_format(current_datetime.getDate());
-            month = zero_first_format(current_datetime.getMonth() + 1);
-            year = current_datetime.getFullYear();
-            hours = zero_first_format(current_datetime.getHours());
-            minutes = zero_first_format(current_datetime.getMinutes());
-            seconds = zero_first_format(current_datetime.getSeconds());
-
             return day + "." + month + "." + year + " " + hours + ":" + minutes + ":" + seconds;
         }
 
@@ -55,9 +47,6 @@
             document.getElementById('current_date_time_block').innerHTML = date_time();
         }, 10);
 
-        setInterval(function () {
-            document.getElementById(ind).innerHTML = "A";
-        }, 1000);
     </script>
 
     <div id="current_date_time_block"></div>
