--- a/calendar.html
+++ b/calendar.html
@@ -27,28 +27,19 @@
         var Shift = [6, 9, 2, 5, 7, 3, 5, 8, 4, 6, 9, 4];
         var NumOfDays = [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31];
         var first_day = day_week - (day - 1) % 7;
-
-
-        function zero_first_format(value) {
-            if (value < 10) {
-                value = '0' + value;
-            }
-            return value;
-        }
-        function date_time() {
-            return day + "." + month + "." + year + " " + hours + ":" + minutes + ":" + seconds;
-        }
-
-        for (var i = 0; i < NumOfDays[month]; i++) {
-            setInterval(function () {
-                document.getElementById(i + first_day).innerHTML = i + 1;
-            }, 10);
-        }
-
+        /*
+                for (var i = 0; i < NumOfDays[month]; i++) {
+                    setInterval(function () {
+                        document.getElementById(i + first_day).innerHTML = i + 1;
+                    }, 10);
+                }
+        */
         setInterval(function () {
-            document.getElementById('current_date_time_block').innerHTML = date_time();
+            document.getElementById(0 + first_day).innerHTML = 0 + 1;
         }, 10);
-
+        setInterval(function () {
+            document.getElementById(1 + first_day).innerHTML = 1 + 1;
+        }, 10);
     </script>
 
     <div id="current_date_time_block"></div>
