--- a/calendar.html
+++ b/calendar.html
@@ -27,24 +27,20 @@
         var Shift = [6, 9, 2, 5, 7, 3, 5, 8, 4, 6, 9, 4];
         var NumOfDays = [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31];
         var first_day = day_week - (day - 1) % 7;
-        /*
-                for (var i = 0; i < NumOfDays[month]; i++) {
-                    setInterval(function () {
-                        document.getElementById(i + first_day).innerHTML = i + 1;
-                    }, 10);
-                }
-        */
-        setInterval(function () {
-            document.getElementById(0 + first_day).innerHTML = 0 + 1;
-        }, 10);
-        setInterval(function () {
-            document.getElementById(1 + first_day).innerHTML = 1 + 1;
-        }, 10);
+        var i = 0;
+
+        while (i < NumOfDays[month]) {
+            setInterval(function () {
+                document.getElementById(i + first_day).innerHTML = i + 1;
+            }, 10);
+            i++;
+        }
+
     </script>
 
     <div id="current_date_time_block"></div>
 
-    <table border="2">
+    <table border="2" width=70 height=70>
         <tr>
             <td id="1">.</td>
             <td id="2">.</td>
