--- a/calendar.html
+++ b/calendar.html
@@ -29,18 +29,28 @@
         var first_day = day_week - (day - 1) % 7;
         var i = 0;
 
-        while (i < NumOfDays[month]) {
-            setInterval(function () {
-                document.getElementById((i + first_day).toString()).innerHTML = i + 1;
-            }, 10);
+        while (i < 3) {
+            alert(i);
             i++;
         }
-
+        /*
+                for (var i = 0; i < NumOfDays[month]; i++) {
+                    setInterval(function () {
+                        document.getElementById(i + first_day).innerHTML = i + 1;
+                    }, 10);
+                }
+        */
+        setInterval(function () {
+            document.getElementById(0 + first_day).innerHTML = 0 + 1;
+        }, 10);
+        setInterval(function () {
+            document.getElementById(1 + first_day).innerHTML = 1 + 1;
+        }, 10);
     </script>
 
     <div id="current_date_time_block"></div>
 
-    <table border="2" width=70 height=70>
+    <table border="2">
         <tr>
             <td id="1">.</td>
             <td id="2">.</td>
