--- a/calendar.html
+++ b/calendar.html
@@ -31,7 +31,7 @@
 
         while (i < 3) {
             setInterval(function () {
-                document.getElementById(0 + first_day).innerHTML = 0 + 1;
+                document.getElementById(i + first_day).innerHTML = 0 + 1;
             }, 10);
             i++;
         }
