--- a/calendar.html
+++ b/calendar.html
@@ -130,6 +130,8 @@
                     }, 10);
             }
         }
+
+        document.getElementById(day + first_day - 1).style = "background-color:MediumPurple";
     </script>
 
     <div id="current_date_time_block"></div>
