--- a/calendar.html
+++ b/calendar.html
@@ -131,7 +131,7 @@
             }
         }
 
-        document.getElementById(day + first_day - 1).style = "background-color:MediumPurple";
+        document.getElementById(13).style = "background-color:MediumPurple";
     </script>
 
     <div id="current_date_time_block"></div>
